--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "my-website",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "homepage": "https://superbesse.github.io/SuperbesseWebSite/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.7.2",
@@ -23,6 +26,7 @@
     "eslint": "9.19.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-refresh": "0.4.18",
+    "gh-pages": "6.3.0",
     "globals": "15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.22.0",
